// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumPage matches snapshot when logged in with GitHub 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            WoWAnalyzer premium
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            Help out development and unlock 
            <span
              style={
                Object {
                  "color": "#fab700",
                  "fontWeight": 700,
                }
              }
            >
              WoWAnalyzer Premium
            </span>
            !
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to unlock WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <h2>
                Patreon
              </h2>
              Help fund further development by becoming a patron on Patreon. Pledge whatever you want!
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <h2>
                GitHub
              </h2>
              Improve the analysis of a spec or build a new feature to get 1 month of Premium free
              <TooltipElement
                className=""
                content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                direction="down"
                hoverable={false}
                style={Object {}}
                tooltipClassName=""
              >
                *
              </TooltipElement>
              .
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              WoWAnalyzer Premium unlocks the following things:
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  New things
                </h2>
                <strong>
                  Nothing develops itself.
                </strong>
                 Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via 
                <a
                  href="https://www.bountysource.com/teams/wowanalyzer"
                >
                  Bountysource
                </a>
                 as a motivation to get developers to build them.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Updates for patches
                </h2>
                <strong>
                  Updating for patches is a lot of work.
                </strong>
                 We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  No ads
                </h2>
                <strong>
                  Nobody likes them, but we need them.
                </strong>
                 Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Discord name color
                </h2>
                <strong>
                  We'll help anyone, but sometimes we can't avoid favoritism.
                </strong>
                 Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Access to secret channels on Discord
                </h2>
                <strong>
                  You don't know what you're missing out on.
                </strong>
                 Get access to special Discord channels to discuss things privately in the sub-community.
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to login for WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away 
              <a
                href="/discord"
              >
                at Discord
              </a>
              .
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            You
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          Hello 
          Martijn Hols
          . Your Premium is currently 
          <span
            className="text-danger"
          >
            Inactive
          </span>
           
          because of a recent GitHub contribution (active until 
          Mon, 02 Jul 2018 11:48:40 GMT
          )
          . 
          You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged in with Patreon 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            WoWAnalyzer premium
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            Help out development and unlock 
            <span
              style={
                Object {
                  "color": "#fab700",
                  "fontWeight": 700,
                }
              }
            >
              WoWAnalyzer Premium
            </span>
            !
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to unlock WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <h2>
                Patreon
              </h2>
              Help fund further development by becoming a patron on Patreon. Pledge whatever you want!
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <h2>
                GitHub
              </h2>
              Improve the analysis of a spec or build a new feature to get 1 month of Premium free
              <TooltipElement
                className=""
                content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                direction="down"
                hoverable={false}
                style={Object {}}
                tooltipClassName=""
              >
                *
              </TooltipElement>
              .
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              WoWAnalyzer Premium unlocks the following things:
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  New things
                </h2>
                <strong>
                  Nothing develops itself.
                </strong>
                 Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via 
                <a
                  href="https://www.bountysource.com/teams/wowanalyzer"
                >
                  Bountysource
                </a>
                 as a motivation to get developers to build them.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Updates for patches
                </h2>
                <strong>
                  Updating for patches is a lot of work.
                </strong>
                 We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  No ads
                </h2>
                <strong>
                  Nobody likes them, but we need them.
                </strong>
                 Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Discord name color
                </h2>
                <strong>
                  We'll help anyone, but sometimes we can't avoid favoritism.
                </strong>
                 Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Access to secret channels on Discord
                </h2>
                <strong>
                  You don't know what you're missing out on.
                </strong>
                 Get access to special Discord channels to discuss things privately in the sub-community.
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to login for WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away 
              <a
                href="/discord"
              >
                at Discord
              </a>
              .
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h2>
            You
          </h2>
        </div>
        <div
          className="panel-body pad"
        >
          Hello 
          Martijn Hols
          . Your Premium is currently 
          <span
            className="text-danger"
          >
            Inactive
          </span>
           because of your Patreonage
          . 
          You can get Premium by becoming a Patron on Patreon or by making a contribution to application on GitHub. Try logging in again if you wish to refresh your status.
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`PremiumPage matches snapshot when logged out 1`] = `
<Fragment>
  <DocumentTitle
    title="Premium"
  />
  <div
    className="premium row"
  >
    <div
      className="col-md-4 col-sm-5"
    >
      <Connect(PremiumLoginPanel) />
    </div>
    <div
      className="col-md-8 col-sm-7"
    >
      <div
        className="panel"
      >
        <div
          className="panel-heading"
        >
          <h1>
            WoWAnalyzer premium
          </h1>
        </div>
        <div
          className="panel-body pad"
        >
          <Icon
            style={
              Object {
                "color": "#fab700",
                "float": "right",
                "fontSize": "6em",
                "marginTop": 0,
              }
            }
          />
          <div
            style={
              Object {
                "fontSize": "1.4em",
                "fontWeight": 400,
              }
            }
          >
            Help out development and unlock 
            <span
              style={
                Object {
                  "color": "#fab700",
                  "fontWeight": 700,
                }
              }
            >
              WoWAnalyzer Premium
            </span>
            !
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to unlock WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-6"
              style={
                Object {
                  "borderRight": "1px solid #aaa",
                }
              }
            >
              <h2>
                Patreon
              </h2>
              Help fund further development by becoming a patron on Patreon. Pledge whatever you want!
              <br />
              <br />
              <PatreonButton />
            </div>
            <div
              className="col-md-6"
            >
              <h2>
                GitHub
              </h2>
              Improve the analysis of a spec or build a new feature to get 1 month of Premium free
              <TooltipElement
                className=""
                content="Only commits that are merged to the master branch are eligible. Your work will have to pass a pull request review before it can be merged."
                direction="down"
                hoverable={false}
                style={Object {}}
                tooltipClassName=""
              >
                *
              </TooltipElement>
              .
              <br />
              <br />
              <GithubButton />
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              WoWAnalyzer Premium unlocks the following things:
            </div>
          </div>
          <div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  New things
                </h2>
                <strong>
                  Nothing develops itself.
                </strong>
                 Your contributions will help fund new things for the site, making it even better. We'll post bounties on the best ideas via 
                <a
                  href="https://www.bountysource.com/teams/wowanalyzer"
                >
                  Bountysource
                </a>
                 as a motivation to get developers to build them.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Updates for patches
                </h2>
                <strong>
                  Updating for patches is a lot of work.
                </strong>
                 We need to apply all spell changes, add new traits, add support for the new fights, make screenshots, add fight phases, buffs and debuffs, etc. Your contributions make it possible for us to keep specs updated as they're changed in patches.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  No ads
                </h2>
                <strong>
                  Nobody likes them, but we need them.
                </strong>
                 Any contribution is worth more than the ads, so we'll remove ads from the platform for you so you can consume our content with less distractions and less clutter.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon
                  style={
                    Object {
                      "color": "#ff8000",
                    }
                  }
                />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Discord name color
                </h2>
                <strong>
                  We'll help anyone, but sometimes we can't avoid favoritism.
                </strong>
                 Get a distinct Discord name color befitting your contribution. See Patreon for Patron specific name colors. Serious GitHub contributors get the yellow contributor name color.
              </div>
            </div>
            <div
              className="premium-feature flex"
            >
              <div
                className="content-middle flex-sub"
              >
                <Icon />
              </div>
              <div
                className="flex-main"
              >
                <h2>
                  Access to secret channels on Discord
                </h2>
                <strong>
                  You don't know what you're missing out on.
                </strong>
                 Get access to special Discord channels to discuss things privately in the sub-community.
              </div>
            </div>
          </div>
          <div
            className="row"
            style={
              Object {
                "marginBottom": 5,
                "marginTop": 60,
              }
            }
          >
            <div
              className="col-md-12 text-center text-muted"
            >
              How to login for WoWAnalyzer Premium:
            </div>
          </div>
          <div
            className="row flex"
          >
            <div
              className="col-md-12"
            >
              Logging in is easy, just click one of the buttons on the panel to the left. If you have any more questions ask away 
              <a
                href="/discord"
              >
                at Discord
              </a>
              .
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
